--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "sourceLanguageTag": "en",
+  "sourceLanguageTag": "ar",
   "languageTags": [
+    "ar",
     "en"
   ],
   "modules": [
