--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.0",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^5.0.0-next.9",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
@@ -41,6 +41,7 @@
 		"formsnap": "^0.4.1",
 		"lucide-svelte": "^0.294.0",
 		"mode-watcher": "^0.1.2",
+		"resend": "^2.0.0",
 		"sveltekit-superforms": "^1.11.0",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18",
