--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@inlang/paraglide-js": "1.0.0-prerelease.14",
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^4.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@tailwindcss/typography": "^0.5.10",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -45,6 +45,7 @@
 		"sveltekit-superforms": "^1.11.0",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18",
+		"vite-imagetools": "^6.2.7",
 		"zod": "^3.22.4"
 	}
 }
